# ChangeLog for net-misc/elianna-pack
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/elianna-pack/Attic/ChangeLog,v 1.4 2006/11/01 13:23:48 gustavoz Exp $

  01 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  elianna-pack-1.0.ebuild:
  Fix for real

  31 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  elianna-pack-1.0.ebuild:
  Fix sounds/digits path

  21 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> +metadata.xml:
  How about some metadata? Silly me

*elianna-pack-1.0 (21 Sep 2006)

  21 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +elianna-pack-1.0.ebuild:
  Initial import of es_AR asterisk voice prompts
