@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/elianna-pack
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/elianna-pack/Attic/ChangeLog,v 1.4 2006/11/01 13:23:48 gustavoz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/elianna-pack/Attic/ChangeLog,v 1.5 2007/01/06 16:38:09 drizzt Exp $
+
+  06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> elianna-pack-1.0.ebuild:
+  s/einfo/elog/
 
   01 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   elianna-pack-1.0.ebuild:
